# b3-synthetic-data

./: .gitignore  README.md  engorda_tables.py  etl.py  extract.py  load.py  load_tables.py  oracle_read_smoke.py  ordem.rtf  pyproject.toml  requirements-vdi-migration.txt  requirements.txt  save_tables.py  secrets.py  specs.json  transform.py  validate_tables.py
.github/workflows/: deploy-eudalia-datagen-dashboard.yml  deploy-eudalia-datagen-scripts-to-s3.yml
datagen/: engorda_tables.py  load_tables.py  save_tables.py  shift_keys.py
docs/plans/: 2026-06-11-rowid-parallel-extract-design.md  2026-06-11-rowid-parallel-extract-implementation.md  2026-06-12-parallel-load-design.md  2026-06-12-parallel-load-implementation.md  2026-06-16-engorda-tables-design.md  2026-06-16-engorda-tables-implementation.md  2026-06-17-engorda-session-handoff.md  2026-06-17-load-append-static-filter-design.md  (+14 more)
scripts/: build_schema_from_dump.py  build_specs_from_constraints.py  extract_constraints.sql  extract_schema.sql  migrate_rowid_to_oci.py  oracle_table_sizes.py  parallel_extract.py  rollback_load.py
tests/: diagnostica_pais_fk.py  gera_spec_config.py  gera_specs_confiavel.py  mais_um_validadord_de_spec.py  ordem_insercao_oracle.py  ordem_insert.py  pre_append_check.py  test_build_schema_from_dump.py  test_build_specs_from_constraints.py  test_engorda_tables.py  test_load_self_ref.py  test_load_tables.py  test_load_validation.py  test_parallel_extract.py  test_rollback_load.py  test_save_tables.py  test_shift_keys.py  test_validate_tables.py  valida_specs.py
